--- a/index.html
+++ b/index.html
@@ -292,16 +292,16 @@
                   <br>
                   <!-- <h5 style="color: black;">Doi: <a href="https://ieeexplore.ieee.org/document/9743283" target="_blank">10.1109/JPHOT.2022.3159735</a></h5> -->
                 </li>
-                <br>
+                <!-- <br>
                 <li>
                   <h5>Status: [Work in progress]</h5> <br>
                   <em> Bhumika Deo, Dhruba Datta, Sanjay Patidar, </em>
                   <b> Monkeypox Disease Detection using Hybrid Transfer Learning Technique/Mode, </b>
-                  <!-- 4<sup>th</sup> International Conference on Data Analytics & Management [ICDAM-2023], London
-                  Metropolitan University, London, UK. -->
+                  4<sup>th</sup> International Conference on Data Analytics & Management [ICDAM-2023], London
+                  Metropolitan University, London, UK.
                   <br>
-                  <!-- <h5 style="color: black;">Doi: <a href="https://ieeexplore.ieee.org/document/9743283" target="_blank">10.1109/JPHOT.2022.3159735</a></h5> -->
-                </li>
+                  <h5 style="color: black;">Doi: <a href="https://ieeexplore.ieee.org/document/9743283" target="_blank">10.1109/JPHOT.2022.3159735</a></h5>
+                </li> -->
               </ul>
 
             </div>
@@ -313,10 +313,13 @@
                 <li>Attained a personal portfolio that <b>ranked on Google</b>.</li>
                 <li>Achieving a LeetCode Reputation of <b>2.8K+</b> and captivating over <b>150K</b> views, captivating
                   coding enthusiasts worldwide.</li>
+                <li>Established a professional network with over <b>7500 connections</b> on <b>LinkedIn.</b></li>
                 <li>Achieved the establishment and growth of a coding channel on <b>Discord</b>, surpassing <b>500
                     members</b>.</li>
-                <li>Awarded certificates of excellence in the "<b>DRMC National Science Festival</b>" and "<b>SGHS Inter
-                    School Science Festival</b>".</li>
+                <li>Secured <b>1<sup>st</sup> position</b> among <b>250+ teams</b> in the Wall Magazine competition at the <b>
+                    DRMC National Science Festival '16.</b></li>
+                <li>Achieved the <b>3<sup>rd</sup> position</b> out of <b>120 teams</b> in the Science Project competition at the
+                  <b>SGHS Inter-School Science Festival '16.</b></li>
               </ul>
 
             </div>
