--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
             <h3> Hey there! </h3>
             I graduated from Delhi Technological University (DTU) with a B.Tech degree in Software Engineering. During
             my time at DTU, I pursued my undergraduate studies and developed a strong skillset in various areas such as
-            data structure & algorithms, front-end development, Ui/Ux
-            design and machine learning. I also have a passion for photography, videography and reading books. With a
+            data structure & algorithms, front-end development, Ui/Ux design, SEO and machine learning. I also have a
+            passion for photography, videography and travelling. With a
             diverse set of technical and creative skills, I'm eager to apply my knowledge to tackle new challenges and
             make meaningful contributions.
             </p> <br>
@@ -316,10 +316,13 @@
                 <li>Established a professional network with over <b>7500 connections</b> on <b>LinkedIn.</b></li>
                 <li>Achieved the establishment and growth of a coding channel on <b>Discord</b>, surpassing <b>500
                     members</b>.</li>
-                <li>Secured <b>1<sup>st</sup> position</b> among <b>250+ teams</b> in the Wall Magazine competition at the <b>
+                <li>Secured <b>1<sup>st</sup> position</b> among <b>250+ teams</b> in the Wall Magazine competition at
+                  the <b>
                     DRMC National Science Festival '16.</b></li>
-                <li>Achieved the <b>3<sup>rd</sup> position</b> out of <b>120 teams</b> in the Science Project competition at the
-                  <b>SGHS Inter-School Science Festival '16.</b></li>
+                <li>Achieved the <b>3<sup>rd</sup> position</b> out of <b>120 teams</b> in the Science Project
+                  competition at the
+                  <b>SGHS Inter-School Science Festival '16.</b>
+                </li>
               </ul>
 
             </div>
