--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <ul>
                   <li> <i class="icofont-rounded-right"></i> <strong>Phone:</strong> +880 17032***** </li>
                   <li> <i class="icofont-rounded-right"></i> <strong>Major:</strong> Software Engineering </li>
-                  <li> <i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor in Technology (B.Tech)
+                  <li> <i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor of Technology (B.Tech)
                   </li>
                   <li> <i class="icofont-rounded-right"></i> <strong>University:</strong> Delhi Technological University
                   </li>
