--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                   4<sup>th</sup> International Conference on Data Analytics & Management [ICDAM-2023], London
                   Metropolitan University, London, UK.
                   <br>
-                  <!-- <h5 style="color: black;">Doi: <a href="https://ieeexplore.ieee.org/document/9743283" target="_blank">10.1109/JPHOT.2022.3159735</a></h5> -->
+                  <!-- <h5 style="color: black;">Doi: <a href="https://doi.org/10.1007/978-981-99-6550-2_5" target="_blank">10.1007/978-981-99-6550-2_5</a></h5> -->
                 </li>
                 <!-- <br>
                 <li>
@@ -380,7 +380,7 @@
             </div> -->
             <div class="resume-item">
               <h4>Dhrubotara Youth Development Foundation</h4>
-              <h5>May 2021 - June 2022</h5>
+              <h5>September 2021 - August 2022</h5>
               <p> <em>New Delhi, India</em> </p>
               <p>DYDF-INDIA combines student power of Bangladesh and India and works on skill development and social
                 issues of both countries. </p>
