--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Bachelor of Technology (B.Tech)</h4>
-              <h5>August 2019 - June 2023</h5>
+              <h5>August 2019 - July 2023</h5>
               <p><em>Delhi Technological University, New Delhi, India</em></p>
               <h6>CGPA: 8.22/10.00 [Software Engineering]</h6>
             </div>
@@ -286,11 +286,11 @@
                 <li>
                   <h5>Status: [Accepted - 23<sup>rd</sup> April, 2023]</h5> <br>
                   <em> Dhruba Datta, Harsh Prakash, Priya Singh, </em>
-                  <b> Skin Cancer Detection with Edge Devices using YOLOv7 Deep CNN,</b>
+                  <b> Skin Cancer Detection with Edge Devices Using YOLOv7 Deep CNN,</b>
                   4<sup>th</sup> International Conference on Data Analytics & Management [ICDAM-2023], London
                   Metropolitan University, London, UK.
                   <br>
-                  <!-- <h5 style="color: black;">Doi: <a href="https://doi.org/10.1007/978-981-99-6550-2_5" target="_blank">10.1007/978-981-99-6550-2_5</a></h5> -->
+                  <h5 style="color: black;">Doi: <a href="https://doi.org/10.1007/978-981-99-6550-2_5" target="_blank">10.1007/978-981-99-6550-2_5</a></h5>
                 </li>
                 <!-- <br>
                 <li>
