--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                   4<sup>th</sup> International Conference on Data Analytics & Management [ICDAM-2023], London
                   Metropolitan University, London, UK.
                   <br>
-                  <h5 style="color: black;">Doi: <a href="https://doi.org/10.1007/978-981-99-6550-2_5" target="_blank">10.1007/978-981-99-6550-2_5</a></h5>
+                  <!-- <h5 style="color: black;">Doi: <a href="https://doi.org/10.1007/978-981-99-6550-2_5" target="_blank">10.1007/978-981-99-6550-2_5</a></h5> -->
                 </li>
                 <!-- <br>
                 <li>
@@ -577,13 +577,11 @@
       <h5>Feel free to reach me out on any of these platforms </h5><br>
       <div class="social-links">
         <hr>
-        <a href="https://www.facebook.com/dhruba.datta.anjan" target="_blank" class="facebook"><i
-            class="bx bxl-facebook"></i></a>
-        <a href="https://discord.gg/zazf3BgJK7" target="_blank" class="discord"> <i class='bx bxl-discord'></i> </a>
-        <a href="https://www.instagram.com/dhrubz_/" target="_blank" class="instagram"><i
-            class="bx bxl-instagram"></i></a>
-        <a href="https://twitter.com/dhruba_anjan" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="https://medium.com/@dhruba-datta" target="_blank" class="medium"><i class="bx bxl-medium"></i></a>
+          <a href="https://www.facebook.com/dhruba.dastta.anjan" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://twitter.com/dhruba_anjan" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="https://www.instagram.com/dhrubz_/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="http://m.me/dhruba.datta.anjan" target="_blank" class="messenger"><i class="bx bxl-messenger"></i></a>
+          <a href="https://discord.gg/zazf3BgJK7" target="_blank" class="discord"> <i class='bx bxl-discord'></i> </a>
         <hr>
       </div>
       <div class="copyright">MyPortfolio &copy; 2023 | by <a href="https://bootstrapmade.com"
