--- a/index.html
+++ b/index.html
@@ -579,8 +579,7 @@
         <a href="https://discord.gg/zazf3BgJK7" target="_blank" class="discord"> <i class='bx bxl-discord'></i> </a>
         <hr>
       </div>
-      <div class="copyright">MyPortfolio &copy; 2023 | by <a href="https://bootstrapmade.com"
-          target="_blank">BootstrapMade</a> </div>
+      <div class="copyright">MyPortfolio &copy; 2023 | All Rights Reserved </div>
     </div>
   </footer>
   <a href="#" class="back-to-top"> <i class="icofont-simple-up"></i> </a>
