link corrected fb

--- a/index.html
+++ b/index.html
@@ -345,6 +345,7 @@
           <h6>Software Engineer</h6>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, vitae commodi .</p>
         </div> -->
+
             <div class="resume-item">
               <h4>Revinns Limited</h4>
               <h5>June 2022 - July 2022</h5>
@@ -570,7 +571,7 @@
       <h5>Feel free to reach me out on any of these platforms </h5><br>
       <div class="social-links">
         <hr>
-        <a href="https://www.facebook.com/dhruba.dastta.anjan" target="_blank" class="facebook"><i
+        <a href="https://www.facebook.com/dhruba.datta.anjan" target="_blank" class="facebook"><i
             class="bx bxl-facebook"></i></a>
         <a href="https://twitter.com/dhruba_anjan" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="https://www.instagram.com/dhrubz_/" target="_blank" class="instagram"><i
