paper status updated

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
               <h4>Conference </h4>
               <ul>
                 <li>
-                  <h5>Status: [Accepted - 23<sup>rd</sup> April, 2023]</h5> <br>
+                  <h5>Status: [Published - 27<sup>th</sup> November, 2023]</h5> <br>
                   <em> Dhruba Datta, Harsh Prakash, Priya Singh, </em>
                   <b> Skin Cancer Detection with Edge Devices Using YOLOv7 Deep CNN,</b>
                   4<sup>th</sup> International Conference on Data Analytics & Management [ICDAM-2023], London
