google scholar profile added

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
       <div class="social-links">
         <a href="https://www.linkedin.com/in/dhruba-datta/" target="_blank" class="linkedin"><i
             class="bx bxl-linkedin-square"></i></a>
+        <a href="https://scholar.google.co.uk/citations?hl=en&user=RGxdIVkAAAAJ&view_op=list_works&authuser=1&gmla=AH70aAURqNk3ktsHQOlfZFUuNTBsHi7ZPnDjzbSkBWhg2ulKof0-hdur7ndSkkQ72sJwZ2ImrmCa9MtZLRPfjYoH"
+          target="_blank" class="Scholar"><i class='bx bxs-graduation'></i></a>
         <a href="https://github.com/dhruba-datta" target="_blank" class="GitHub"><i class="bx bxl-github"></i></a>
-        <a href="https://www.instagram.com/dhrubz_/" target="_blank" class="instagram"><i
-            class="bx bxl-instagram"></i></a>
         <a href="https://www.youtube.com/DhrubaDattaAnjan" target="_blank" class="youtube"><i
             class="bx bxl-youtube"></i></a>
         <a href="https://t.me/dhruba_datta_anjan" target="_blank" class="telegram"><i class="bx bxl-telegram"></i></a>
@@ -573,11 +573,12 @@
         <hr>
         <a href="https://www.facebook.com/dhruba.datta.anjan" target="_blank" class="facebook"><i
             class="bx bxl-facebook"></i></a>
-        <a href="https://twitter.com/dhruba_anjan" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://discord.gg/zazf3BgJK7" target="_blank" class="discord"> <i class='bx bxl-discord'></i> </a>
         <a href="https://www.instagram.com/dhrubz_/" target="_blank" class="instagram"><i
             class="bx bxl-instagram"></i></a>
-        <a href="http://m.me/dhruba.datta.anjan" target="_blank" class="messenger"><i class="bx bxl-messenger"></i></a>
-        <a href="https://discord.gg/zazf3BgJK7" target="_blank" class="discord"> <i class='bx bxl-discord'></i> </a>
+        <a href="https://twitter.com/dhruba_anjan" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://www.linkedin.com/in/dhruba-datta/" target="_blank" class="linkedin"><i
+            class="bx bxl-linkedin"></i></a>
         <hr>
       </div>
       <div class="copyright">MyPortfolio &copy; 2023 | All Rights Reserved </div>
