--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
       <div class="social-links">
         <a href="https://www.linkedin.com/in/dhruba-datta/" target="_blank" class="linkedin"><i
             class="bx bxl-linkedin-square"></i></a>
-        <a href="https://scholar.google.co.uk/citations?hl=en&user=RGxdIVkAAAAJ&view_op=list_works&authuser=1&gmla=AH70aAURqNk3ktsHQOlfZFUuNTBsHi7ZPnDjzbSkBWhg2ulKof0-hdur7ndSkkQ72sJwZ2ImrmCa9MtZLRPfjYoH"
-          target="_blank" class="Scholar"><i class='bx bxs-graduation'></i></a>
+        <a href="https://tinyurl.com/dhruba-datta" target="_blank" class="Scholar"><i class='bx bxs-graduation'></i></a>
         <a href="https://github.com/dhruba-datta" target="_blank" class="GitHub"><i class="bx bxl-github"></i></a>
         <a href="https://www.youtube.com/DhrubaDattaAnjan" target="_blank" class="youtube"><i
             class="bx bxl-youtube"></i></a>
