edu timeline updated

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
       <div class="social-links">
         <a href="https://www.linkedin.com/in/dhruba-datta/" target="_blank" class="linkedin"><i
             class="bx bxl-linkedin-square"></i></a>
-        <a href="https://scholar.google.co.uk/citations?hl=en&user=RGxdIVkAAAAJ&view_op=list_works&authuser=1&gmla=AH70aAURqNk3ktsHQOlfZFUuNTBsHi7ZPnDjzbSkBWhg2ulKof0-hdur7ndSkkQ72sJwZ2ImrmCa9MtZLRPfjYoH" target="_blank" class="Scholar"><i class='bx bxs-graduation'></i></a>
+        <a href="https://scholar.google.co.uk/citations?hl=en&user=RGxdIVkAAAAJ&view_op=list_works&authuser=1&gmla=AH70aAURqNk3ktsHQOlfZFUuNTBsHi7ZPnDjzbSkBWhg2ulKof0-hdur7ndSkkQ72sJwZ2ImrmCa9MtZLRPfjYoH"
+          target="_blank" class="Scholar"><i class='bx bxs-graduation'></i></a>
         <a href="https://github.com/dhruba-datta" target="_blank" class="GitHub"><i class="bx bxl-github"></i></a>
         <a href="https://www.youtube.com/DhrubaDattaAnjan" target="_blank" class="youtube"><i
             class="bx bxl-youtube"></i></a>
@@ -265,13 +266,13 @@
             </div>
             <div class="resume-item">
               <h4>Higher Secondary Certificate (HSC)</h4>
-              <h5>April 2016 - August 2018</h5>
+              <h5>July 2016 - August 2018</h5>
               <p><em>Dhaka College, Dhaka, Bangladesh</em></p>
               <h6>GPA: 5.00/5.00 [Science]</h6>
             </div>
             <div class="resume-item">
               <h4>Secondary School Certificate (SSC)</h4>
-              <h5>January 2006 - March 2016</h5>
+              <h5>January 2006 - June 2016</h5>
               <p><em>St. Gregory's High School, Dhaka, Bangladesh</em></p>
               <h6>GPA: 5.00/5.00 [Science]</h6>
             </div>
