publication design updated

--- a/index.html
+++ b/index.html
@@ -285,10 +285,14 @@
               <ul>
                 <li>
                   <h5>Status: <em>[Published - 28<sup>th</sup> November, 2023]</em></h5> <br>
-                  <em> Dhruba Datta, Harsh Prakash, Priya Singh, </em>
                   <b> Skin Cancer Detection with Edge Devices Using YOLOv7 Deep CNN,</b>
-                  4<sup>th</sup> International Conference on Data Analytics & Management [ICDAM-2023], London
-                  Metropolitan University, London, UK.
+                  <em>4<sup>th</sup> International Conference on Data Analytics & Management [ICDAM-2023], London
+                    Metropolitan University, London, UK.</em>
+                  <br>
+                  <h2>
+                    <span style=" font-weight: 600;">Dhruba Datta,</span>
+                    <span style=" font-weight: 500;">Harsh Prakash, Priya Singh</span>
+                  </h2>
                   <br>
                   <h2 style="color: black;">Doi: <a href="https://doi.org/10.1007/978-981-99-6550-2_5"
                       target="_blank">10.1007/978-981-99-6550-2_5</a></h2>
