resume section updated

--- a/index.html
+++ b/index.html
@@ -313,10 +313,9 @@
                   search results.
                 </li>
                 <li>Solved over <b> 450 problems </b> and achieved a LeetCode reputation of <b>3K+</b> and captivating
-                  over <b>200K</b> views, captivating
-                  coding enthusiasts worldwide.</li>
+                  over <b>200K</b> views, captured the attention of coding enthusiasts worldwide.</li>
                 <!-- <li>Established a professional network with over <b>8000 connections</b> on <b>LinkedIn.</b></li> -->
-                <li>Achieved the establishment and growth of a coding channel on <b>Discord</b>, surpassing <b>500
+                <li>Achieved the establishment and growth of a coding channel on <b>Discord</b>, surpassing <b>600
                     members</b>.</li>
                 <li>Secured <b>1<sup>st</sup> position</b> among <b>250+ teams</b> in the Wall Magazine competition at
                   the <b>
