--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
               <h4>Conference </h4>
               <ul>
                 <li>
-                  <h5>Status: <em>[Published - 28<sup>th</sup> November, 2023]</em></h5> <br>
+                  <h5>Status: <em>[Published - November 2023]</em></h5> <br>
                   <b> Skin Cancer Detection with Edge Devices Using YOLOv7 Deep CNN,</b>
                   <em>4<sup>th</sup> International Conference on Data Analytics & Management [ICDAM-2023], London
                     Metropolitan University, London, UK.</em>
