--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                     <span style=" font-weight: 500;">Harsh Prakash, Priya Singh</span>
                   </h2>
                   <br>
-                  <h2 style="color: black;">Doi: <a href="https://doi.org/10.1007/978-981-99-6550-2_5"
+                  <h2 style="color: #272829;">Doi: <a href="https://doi.org/10.1007/978-981-99-6550-2_5"
                       target="_blank">10.1007/978-981-99-6550-2_5</a></h2>
                 </li>
 
