--- a/index.html
+++ b/index.html
@@ -258,6 +258,12 @@
               </ul>
             </div>
             <h3 class="resume-title">Education</h3>
+            <!-- <div class="resume-item">
+              <h4>Master of Science (MSC)</h4>
+              <h5>September 2024 - Present</h5>
+              <p><em>University of Padova, Padova, Italy</em></p>
+              <h6>CGPA: --/4.00 [Cybersecurity]</h6>
+            </div> -->
             <div class="resume-item">
               <h4>Bachelor of Technology (B.Tech)</h4>
               <h5>August 2019 - July 2023</h5>
@@ -290,7 +296,7 @@
                     Metropolitan University, London, UK.</em>
                   <br>
                   <h2>
-                    <span style=" font-weight: 600;">Dhruba Datta,</span>
+                    <b>Dhruba Datta,</b>
                     <span style=" font-weight: 500;">Harsh Prakash, Priya Singh</span>
                   </h2>
                   <br>
