--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li> <i class="icofont-rounded-right"></i> <strong>Phone:</strong> +880 17032***** </li>
+                  <li> <i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 70445 66978 </li>
                   <li> <i class="icofont-rounded-right"></i> <strong>Major:</strong> Software Engineering </li>
                   <li> <i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor of Technology (B.Tech)
                   </li>
@@ -531,9 +531,10 @@
                 <p>dhrubadattaanjan@gmail.com</p>
               </div>
               <div class="phone"> <i class="icofont-phone"></i>
-                <h4>Call:</h4>
-                <p>+880 17032*****</p>
+                <h4>Phone:</h4>
+                <p>+91 70445 66978</p>
               </div>
+
               <div class="text-center"> <a href="mailto:dhrubadattaanjan@gmail.com" target="_blank" class="btn mail"
                   role="button" aria-disabled="true"><span> Get In Touch</span> </a> </div>
             </div> <br>
