--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <ul>
                   <li> <i class="icofont-rounded-right"></i> Artificial Intelligence & Machine Learning </li>
                   <li> <i class="icofont-rounded-right"></i> Natural Language Processing </li>
-                  <li> <i class="icofont-rounded-right"></i> Cyber Security </li>
+                  <li> <i class="icofont-rounded-right"></i> Cybersecurity </li>
                 </ul>
               </div>
               <div class="col-lg-6">
