paper name updated

--- a/index.html
+++ b/index.html
@@ -296,8 +296,9 @@
                     Metropolitan University, London, UK.</em>
                   <br>
                   <h2>
-                    <b>Dhruba Datta,</b>
-                    <span style=" font-weight: 500;">Harsh Prakash, Priya Singh</span>
+                    <span style=" font-weight: 500;">
+                      <b>Dhruba Datta,</b> Harsh Prakash, Priya Singh
+                    </span>
                   </h2>
                   <br>
                   <h2 style="color: #272829;">Doi: <a
