--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             <!-- <div class="resume-item">
               <h4>Master of Science (MSC)</h4>
               <h5>September 2024 - Present</h5>
-              <p><em>University of Padova, Padova, Italy</em></p>
+              <p><em>University of ---</em></p>
               <h6>CGPA: --/4.00 [Cybersecurity]</h6>
             </div> -->
             <div class="resume-item">
