coding language updated

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
             <h3 class="resume-title">Skills</h3>
             <div class="resume-item">
               <ul>
-                <li>Programming Languages: C, C++, Java (Basic).</li>
+                <li>Programming Languages: C, C++, Python.</li>
                 <li>Frameworks: ReactJS, Tailwind, Bootstrap.</li>
                 <li>Database: Firebase, MySQL, Sanity.</li>
                 <li>Cloud Platforms: GitHub, Netlify.</li>
