experience section updated!

--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
             <!-- <div class="resume-item">
               <h4>Master of Science (MSC)</h4>
               <h5>September 2024 - Present</h5>
-              <p><em>University of ---</em></p>
-              <h6>CGPA: --/4.00 [Cybersecurity]</h6>
+              <p><em>University of Naples Federico II, Naples, Italy</em></p>
+              <h6>CGPA: --/4.00 [Data Science]</h6>
             </div> -->
             <div class="resume-item">
               <h4>Bachelor of Technology (B.Tech)</h4>
@@ -349,38 +349,68 @@
         <div class="row">
           <div class="col-lg-6">
             <h3 class="resume-title">Professional</h3>
-            <!-- <div class="resume-item">
-          <h4>XYZ company</h4>
-          <h5>June 2023 - Present</h5>
-          <p> <em>Dhaka, Bangladesh</em> </p>
-          <h6>Software Engineer</h6>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, vitae commodi .</p>
-        </div> -->
+
+            <div class="resume-item">
+              <h4>kounsel</h4>
+              <h5>June 2024 - Present</h5>
+              <p> <em>California, United States of America · Remote</em> </p>
+              <h6>Quality Assurance Engineer</h6>
+
+              <ul>
+                <li>Conducted quality assurance and automation testing using Selenium, and managed bugs with Jira to
+                  enhance workflow.
+                </li>
+                <li>Assisted in backend development by adding new products to the MongoDB server and maintained code
+                  quality with Bitbucket.</li>
+              </ul>
+
+            </div>
+
+            <div class="resume-item">
+              <h4>Kingsley Engineering Service Corporation</h4>
+              <h5>August 2023 - Present</h5>
+              <p> <em>Dhaka, Bangladesh · Hybrid</em> </p>
+              <h6>Software Engineer</h6>
+              <ul>
+                <li>Redesigned the company's website for improved functionality and SEO, and developed micro websites
+                  and web apps to enhance user experience.
+                </li>
+                <li>Created visually captivating interfaces with seamless navigation and produced engaging social media
+                  content for brand promotion.</li>
+              </ul>
+            </div>
 
             <div class="resume-item">
               <h4>Revinns Limited</h4>
               <h5>June 2022 - July 2022</h5>
-              <p> <em>Dhaka, Bangladesh</em> </p>
+              <p> <em>Dhaka, Bangladesh · Hybrid</em> </p>
               <h6>Web Developer Intern</h6>
-              <p>
-                Had experience in Ui/Ux and front-end development, specialising in the design and development of
-                microsites, landing pages and different web applications.
-              </p>
+              <ul>
+                <li>
+                  Gained experience in UI design and front-end development, contributing to the
+                  development of micro websites and web apps.</li>
+                <li>
+                  Applied design principles to create visually captivating and user-centric interfaces, ensuring
+                  compatibility across various devices and browsers using HTML and CSS.
+                </li>
+              </ul>
             </div>
+
+          </div>
+          <div class="col-lg-6">
             <h3 class="resume-title">Skills</h3>
             <div class="resume-item">
               <ul>
-                <li>Programming Languages: C, C++, Python.</li>
-                <li>Frameworks: ReactJS, Tailwind, Bootstrap.</li>
-                <li>Database: Firebase, MySQL, Sanity.</li>
-                <li>Cloud Platforms: GitHub, Netlify.</li>
-                <li>Additional Skills: SEO, UI Design, Graphic Design.</li>
+                <li>Programming Languages: C, C++, Python, Kotlin, Java.</li>
+                <li>Frameworks: ReactJS, React Native, Tailwind, Bootstrap.</li>
+                <li>Database: Firebase, MongoDB, MySQL, Sanity.</li>
+                <li>Cloud Platforms: GitHub, Bitbucket, Netlify.</li>
+                <li>Additional Skills: SEO, Testing, UI Design, Graphic Design.</li>
                 <li>Fluently speak 3 Languages: English, Bengali, Hindi.</li>
-                <li>Others: VS Code, Figma, MS Office, Adobe Photoshop.</li>
+                <li>Others: VS Code, IntelliJ, Figma, MS Office, Adobe Photoshop.</li>
               </ul>
             </div>
-          </div>
-          <div class="col-lg-6">
+
             <h3 class="resume-title">Volunteer</h3>
 
             <div class="resume-item">
@@ -583,17 +613,17 @@
       <h5>Feel free to reach me out on any of these platforms </h5><br>
       <div class="social-links">
         <hr>
-        <a href="https://www.facebook.com/dhruba.datta.anjan" target="_blank" class="facebook"><i
-            class="bx bxl-facebook"></i></a>
+        <a href="https://www.linkedin.com/in/dhruba-datta/" target="_blank" class="linkedin"><i
+            class="bx bxl-linkedin"></i></a>
         <a href="https://discord.gg/zazf3BgJK7" target="_blank" class="discord"> <i class='bx bxl-discord'></i> </a>
         <a href="https://www.instagram.com/dhrubz_/" target="_blank" class="instagram"><i
             class="bx bxl-instagram"></i></a>
         <a href="https://twitter.com/dhruba_anjan" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="https://www.linkedin.com/in/dhruba-datta/" target="_blank" class="linkedin"><i
-            class="bx bxl-linkedin"></i></a>
+        <a href="https://www.facebook.com/dhruba.datta.anjan" target="_blank" class="facebook"><i
+            class="bx bxl-facebook"></i></a>
         <hr>
       </div>
-      <div class="copyright">MyPortfolio &copy; 2023 | All Rights Reserved </div>
+      <div class="copyright">MyPortfolio &copy; 2024 | All Rights Reserved </div>
     </div>
   </footer>
   <a href="#" class="back-to-top"> <i class="icofont-simple-up"></i> </a>
