--- a/index.html
+++ b/index.html
@@ -451,12 +451,29 @@
           <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-web">Projects</li>
+              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-app">Mobile</li>
               <li data-filter=".filter-card">Others</li>
             </ul>
           </div>
         </div>
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+          <!-- project 09 -->
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap"> <img src="img/project/project9.webp" class="img-fluid" alt="dhruba datta" />
+              <div class="portfolio-info">
+                <h4>Using React Native and ReactJS</h4>
+                <div class="portfolio-links">
+                  <a href="https://github.com/dhruba-datta/AB-Pharmacy-Expo" target="_blank"
+                    data-gallery="portfolioGallery" class="portfolio-lightbox" title="GitHub Link"><i
+                      class="bx bxl-github"></i></a>
+                  <a href="https://ab-pharmacy.netlify.app/" target="_blank" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Visit Website"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <!-- project 01 -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap"> <img src="img/project/project1.webp" class="img-fluid" alt="dhruba datta" />
@@ -467,6 +484,37 @@
                     class="portfolio-lightbox" title="GitHub Link"><i class="bx bxl-github"></i></a>
                   <a href="https://cryptoverse20.netlify.app" target="_blank" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Visit Website"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- project 03 -->
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap"> <img src="img/project/project3.webp" class="img-fluid" alt="dhruba datta" />
+              <div class="portfolio-info">
+                <h4>React App using Google API</h4>
+                <div class="portfolio-links">
+                  <a href="https://github.com/dhruba-datta/photoBooth" target="_blank" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="GitHub Link"><i class="bx bxl-github"></i></a>
+                  <a href="https://phootobooth.netlify.app" target="_blank" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Visit Website"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- project 04 -->
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap"> <img src="img/project/project5.webp" class="img-fluid" alt="dhruba datta" />
+              <div class="portfolio-info">
+                <h4>Website using HTML, CSS & JS</h4>
+                <div class="portfolio-links">
+                  <a href="https://github.com/dhruba-datta/EasyCooking" target="_blank" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="GitHub Link"><i class="bx bxl-github"></i></a>
+                  <a href="https://dhruba-datta.github.io/EasyCooking/" target="_blank"
+                    class="portfolio-details-lightbox" data-glightbox="type: external" title="Visit Website"><i
+                      class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -486,37 +534,8 @@
               </div>
             </div>
           </div>
-          <!-- project 03 -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap"> <img src="img/project/project3.webp" class="img-fluid" alt="dhruba datta" />
-              <div class="portfolio-info">
-                <h4>React App using Google API</h4>
-                <div class="portfolio-links">
-                  <a href="https://github.com/dhruba-datta/photoBooth" target="_blank" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="GitHub Link"><i class="bx bxl-github"></i></a>
-                  <a href="https://phootobooth.netlify.app" target="_blank" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Visit Website"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- project 04 -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap"> <img src="img/project/project5.webp" class="img-fluid" alt="dhruba datta" />
-              <div class="portfolio-info">
-                <h4>Website using HTML, CSS & JS</h4>
-                <div class="portfolio-links">
-                  <a href="https://github.com/dhruba-datta/EasyCooking" target="_blank" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="GitHub Link"><i class="bx bxl-github"></i></a>
-                  <a href="https://dhruba-datta.github.io/EasyCooking/" target="_blank"
-                    class="portfolio-details-lightbox" data-glightbox="type: external" title="Visit Website"><i
-                      class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
           <!-- project 05 -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap"> <img src="img/project/project7.webp" class="img-fluid" alt="dhruba datta" />
               <div class="portfolio-info">
                 <h4>Watch my designs on Behance</h4>
@@ -526,7 +545,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
           <!-- project 06 -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap"> <img src="img/project/project8.webp" class="img-fluid" alt="dhruba datta" />
