--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
             class="bx bxl-linkedin-square"></i></a>
         <a href="https://scholar.google.co.uk/citations?hl=en&user=RGxdIVkAAAAJ&view_op=list_works&authuser=1&gmla=AH70aAURqNk3ktsHQOlfZFUuNTBsHi7ZPnDjzbSkBWhg2ulKof0-hdur7ndSkkQ72sJwZ2ImrmCa9MtZLRPfjYoH"
           target="_blank" class="Scholar"><i class='bx bxs-graduation'></i></a>
+        <a href="https://www.instagram.com/dhrubz_/" target="_blank" class="instagram"><i
+            class="bx bxl-instagram"></i></a>
         <a href="https://github.com/dhruba-datta" target="_blank" class="GitHub"><i class="bx bxl-github"></i></a>
-        <a href="https://www.youtube.com/DhrubaDattaAnjan" target="_blank" class="youtube"><i
-            class="bx bxl-youtube"></i></a>
         <a href="https://t.me/dhruba_datta_anjan" target="_blank" class="telegram"><i class="bx bxl-telegram"></i></a>
       </div>
     </div>
@@ -634,7 +634,9 @@
         <hr>
         <a href="https://www.linkedin.com/in/dhruba-datta/" target="_blank" class="linkedin"><i
             class="bx bxl-linkedin"></i></a>
-        <a href="https://discord.gg/zazf3BgJK7" target="_blank" class="discord"> <i class='bx bxl-discord'></i> </a>
+        <!-- <a href="https://discord.gg/zazf3BgJK7" target="_blank" class="discord"> <i class='bx bxl-discord'></i> </a> -->
+        <a href="https://www.youtube.com/DhrubaDattaAnjan" target="_blank" class="youtube"><i
+            class="bx bxl-youtube"></i></a>
         <a href="https://www.instagram.com/dhrubz_/" target="_blank" class="instagram"><i
             class="bx bxl-instagram"></i></a>
         <a href="https://twitter.com/dhruba_anjan" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
