--- a/index.html
+++ b/index.html
@@ -160,82 +160,65 @@
         </div>
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-            <div class="icon-box iconbox-blue">
-              <div class="icon"> <img width="100" height="100" viewBox="0 0 600 600" src="img/Skills/web.webp"
-                  alt="dhruba datta">
-                <path stroke="none" stroke-width="0" fill="#f5f5f5"
-                  d="M300,521.0016835830174C376.1290562159157,517.8887921683347,466.0731472004068,529.7835943286574,510.70327084640275,468.03025145048787C554.3714126377745,407.6079735673963,508.03601936045806,328.9844924480964,491.2728898941984,256.3432110539036C474.5976632858925,184.082847569629,479.9380746630129,96.60480741107993,416.23090153303,58.64404602377083C348.86323505073057,18.502131276798302,261.93793281208167,40.57373210992963,193.5410806939664,78.93577620505333C130.42746243093433,114.334589627462,98.30271207620316,179.96522072025542,76.75703585869454,249.04625023123273C51.97151888228291,328.5150500222984,13.704378332031375,421.85034740162234,66.52175969318436,486.19268352777647C119.04800174914682,550.1803526380478,217.28368757567262,524.383925680826,300,521.0016835830174">
-                </path> </img>
+            <a href="https://github.com/dhruba-datta" target="_blank" class="icon-box iconbox-blue">
+              <div class="icon">
+                <img width="100" height="100" src="img/Skills/web.webp" alt="dhruba datta">
               </div>
-              <h4><a href="https://github.com/dhruba-datta" target="_blank">Web Development</a></h4>
+              <h4>Web Development</h4>
               <p>Front-end Development using HTML, CSS and skilled in deploying Back-end</p>
-            </div>
+            </a>
           </div>
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in"
             data-aos-delay="200">
-            <div class="icon-box iconbox-orange">
-              <div class="icon"> <img width="100" height="100" viewBox="0 0 600 600" src="img/Skills/dsa.webp"
-                  alt="dhruba datta">
-                <path stroke="none" stroke-width="0" fill="#f5f5f5"
-                  d="M300,521.0016835830174C376.1290562159157,517.8887921683347,466.0731472004068,529.7835943286574,510.70327084640275,468.03025145048787C554.3714126377745,407.6079735673963,508.03601936045806,328.9844924480964,491.2728898941984,256.3432110539036C474.5976632858925,184.082847569629,479.9380746630129,96.60480741107993,416.23090153303,58.64404602377083C348.86323505073057,18.502131276798302,261.93793281208167,40.57373210992963,193.5410806939664,78.93577620505333C130.42746243093433,114.334589627462,98.30271207620316,179.96522072025542,76.75703585869454,249.04625023123273C51.97151888228291,328.5150500222984,13.704378332031375,421.85034740162234,66.52175969318436,486.19268352777647C119.04800174914682,550.1803526380478,217.28368757567262,524.383925680826,300,521.0016835830174">
-                </path> </img>
+            <a href="https://leetcode.com/dhruba-datta/" target="_blank" class="icon-box iconbox-orange">
+              <div class="icon">
+                <img width="100" height="100" src="img/Skills/dsa.webp" alt="dhruba datta">
               </div>
-              <h4><a href="https://leetcode.com/dhruba-datta/" target="_blank">Data Structre & Algorithms</a></h4>
+              <h4>Data Structure & Algorithms</h4>
               <p>Preparation for technical interviews and developed strong coding skills</p>
-            </div>
+            </a>
           </div>
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in"
             data-aos-delay="300">
-            <div class="icon-box iconbox-pink">
-              <div class="icon"> <img width="100" height="100" viewBox="0 0 600 600" src="img/Skills/dbms.webp"
-                  alt="dhruba datta">
-                <path stroke="none" stroke-width="0" fill="#f5f5f5"
-                  d="M300,521.0016835830174C376.1290562159157,517.8887921683347,466.0731472004068,529.7835943286574,510.70327084640275,468.03025145048787C554.3714126377745,407.6079735673963,508.03601936045806,328.9844924480964,491.2728898941984,256.3432110539036C474.5976632858925,184.082847569629,479.9380746630129,96.60480741107993,416.23090153303,58.64404602377083C348.86323505073057,18.502131276798302,261.93793281208167,40.57373210992963,193.5410806939664,78.93577620505333C130.42746243093433,114.334589627462,98.30271207620316,179.96522072025542,76.75703585869454,249.04625023123273C51.97151888228291,328.5150500222984,13.704378332031375,421.85034740162234,66.52175969318436,486.19268352777647C119.04800174914682,550.1803526380478,217.28368757567262,524.383925680826,300,521.0016835830174">
-                </path> </img>
+            <a href="https://www.kaggle.com/dhrubadatta" target="_blank" class="icon-box iconbox-pink">
+              <div class="icon">
+                <img width="100" height="100" src="img/Skills/dbms.webp" alt="dhruba datta">
               </div>
-              <h4><a href="https://www.kaggle.com/dhrubadatta" target="_blank">Machine Learning</a></h4>
+              <h4>Machine Learning</h4>
               <p>Trying to learn and explore the machine learning domain over time</p>
-            </div>
+            </a>
           </div>
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
-            <div class="icon-box iconbox-yellow">
-              <div class="icon"> <img width="100" height="100" viewBox="0 0 600 600" src="img/Skills/notes.webp"
-                  alt="dhruba datta">
-                <path stroke="none" stroke-width="0" fill="#f5f5f5"
-                  d="M300,521.0016835830174C376.1290562159157,517.8887921683347,466.0731472004068,529.7835943286574,510.70327084640275,468.03025145048787C554.3714126377745,407.6079735673963,508.03601936045806,328.9844924480964,491.2728898941984,256.3432110539036C474.5976632858925,184.082847569629,479.9380746630129,96.60480741107993,416.23090153303,58.64404602377083C348.86323505073057,18.502131276798302,261.93793281208167,40.57373210992963,193.5410806939664,78.93577620505333C130.42746243093433,114.334589627462,98.30271207620316,179.96522072025542,76.75703585869454,249.04625023123273C51.97151888228291,328.5150500222984,13.704378332031375,421.85034740162234,66.52175969318436,486.19268352777647C119.04800174914682,550.1803526380478,217.28368757567262,524.383925680826,300,521.0016835830174">
-                </path> </img>
+            <a href="https://medium.com/@dhruba-datta" target="_blank" class="icon-box iconbox-yellow">
+              <div class="icon">
+                <img width="100" height="100" src="img/Skills/notes.webp" alt="dhruba datta">
               </div>
-              <h4><a href="https://medium.com/@dhruba-datta" target="_blank">Blog Writing</a></h4>
+              <h4>Blog Writing</h4>
               <p>Explore the latest trends in technology and write variety of articles on Medium</p>
-            </div>
+            </a>
           </div>
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
-            <div class="icon-box iconbox-red">
-              <div class="icon"> <img width="100" height="100" viewBox="0 0 600 600" src="img/Skills/camera.webp"
-                  alt="dhruba datta">
-                <path stroke="none" stroke-width="0" fill="#f5f5f5"
-                  d="M300,521.0016835830174C376.1290562159157,517.8887921683347,466.0731472004068,529.7835943286574,510.70327084640275,468.03025145048787C554.3714126377745,407.6079735673963,508.03601936045806,328.9844924480964,491.2728898941984,256.3432110539036C474.5976632858925,184.082847569629,479.9380746630129,96.60480741107993,416.23090153303,58.64404602377083C348.86323505073057,18.502131276798302,261.93793281208167,40.57373210992963,193.5410806939664,78.93577620505333C130.42746243093433,114.334589627462,98.30271207620316,179.96522072025542,76.75703585869454,249.04625023123273C51.97151888228291,328.5150500222984,13.704378332031375,421.85034740162234,66.52175969318436,486.19268352777647C119.04800174914682,550.1803526380478,217.28368757567262,524.383925680826,300,521.0016835830174">
-                </path> </img>
+            <a href="https://www.instagram.com/dhrubz_/" target="_blank" class="icon-box iconbox-red">
+              <div class="icon">
+                <img width="100" height="100" src="img/Skills/camera.webp" alt="dhruba datta">
               </div>
-              <h4><a href="https://www.instagram.com/dhrubz_/" target="_blank">Photography</a></h4>
+              <h4>Photography</h4>
               <p>Sharing photography on Instagram, skilled in Photoshop, Lightroom & Premiere Pro</p>
-            </div>
+            </a>
           </div>
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
-            <div class="icon-box iconbox-teal">
-              <div class="icon"> <img width="100" height="100" viewBox="0 0 600 600" src="img/Skills/youtube.webp"
-                  alt="dhruba datta">
-                <path stroke="none" stroke-width="0" fill="#f5f5f5"
-                  d="M300,521.0016835830174C376.1290562159157,517.8887921683347,466.0731472004068,529.7835943286574,510.70327084640275,468.03025145048787C554.3714126377745,407.6079735673963,508.03601936045806,328.9844924480964,491.2728898941984,256.3432110539036C474.5976632858925,184.082847569629,479.9380746630129,96.60480741107993,416.23090153303,58.64404602377083C348.86323505073057,18.502131276798302,261.93793281208167,40.57373210992963,193.5410806939664,78.93577620505333C130.42746243093433,114.334589627462,98.30271207620316,179.96522072025542,76.75703585869454,249.04625023123273C51.97151888228291,328.5150500222984,13.704378332031375,421.85034740162234,66.52175969318436,486.19268352777647C119.04800174914682,550.1803526380478,217.28368757567262,524.383925680826,300,521.0016835830174">
-                </path> </img>
+            <a href="https://www.youtube.com/DhrubaDattaAnjan" target="_blank" class="icon-box iconbox-teal">
+              <div class="icon">
+                <img width="100" height="100" src="img/Skills/youtube.webp" alt="dhruba datta">
               </div>
-              <h4><a href="https://www.youtube.com/DhrubaDattaAnjan" target="_blank">Content Creation</a></h4>
+              <h4>Content Creation</h4>
               <p>Interest in Video Creation & Editing, with uploads on YouTube</p>
-            </div>
+            </a>
           </div>
         </div>
       </div>
     </section>
+
 
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
