--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <header id="header" class="d-flex flex-column justify-content-center">
     <nav class="nav-menu">
       <ul>
-        <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
+        <li class="active"><a href="#hero"><i class="bx bx-home-alt"></i> <span>Home</span></a></li>
         <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
         <li><a href="#skill"><i class='bx bx-pulse'></i> <span>Skills</span></a></li>
         <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
@@ -72,7 +72,7 @@
       <p class="font-weight-bold"> Hello, I'm </p>
       <h1>DHRUBA DATTA</h1>
       <p class="font-weight-bold"> I'm a <span class="typed"
-          data-typed-items="Software Engineer, Scholarship Recipient, Web Developer, Graphic Designer, Competitive Coder, Photographer, Content Creator"></span>
+          data-typed-items="Software Engineer, Scholarship Recipient, Web Developer, QA Engineer, Competitive Coder, Photographer, Content Creator"></span>
       </p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/dhruba-datta/" target="_blank" class="linkedin"><i
