--- a/index.html
+++ b/index.html
@@ -21,12 +21,29 @@
 
   <!-- Favicons -->
   <link rel="icon" type="image/x-icon" href="img/favicon/favicon.ico">
-  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+
+  <!-- Apple Touch Icons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="img/favicon/apple-touch-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="img/favicon/apple-touch-icon-152x152.png">
+
+  <!-- Android Chrome Icons -->
+  <link rel="icon" type="image/png" sizes="192x192" href="img/favicon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="img/favicon/android-chrome-512x512.png">
+
+  <!-- Web Manifest -->
   <link rel="manifest" href="img/favicon/site.webmanifest">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+
+  <!-- Safari Pinned Tab -->
+  <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+
+  <!-- Microsoft Tile -->
+  <meta name="msapplication-TileImage" content="img/favicon/mstile-150x150.png">
   <meta name="msapplication-TileColor" content="#da532c">
+
+  <!-- Theme Color -->
   <meta name="theme-color" content="#ffffff">
 
   <!-- Google Fonts -->
