--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     content="I'm Dhruba, currently an undergraduate student at Delhi Technological University(DTU)." />
 
   <!-- Favicons -->
-  <link rel="icon" type="image/x-icon" href="img/favicon/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
 
